--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "homepage": "https://github.com/Stevenic/roon-kit#readme",
   "dependencies": {
-    "node-roon-api"           : "github:roonlabs/node-roon-api",
-    "node-roon-api-browse"    : "github:roonlabs/node-roon-api-browse",
-    "node-roon-api-image"     : "github:roonlabs/node-roon-api-image",
-    "node-roon-api-settings"  : "github:roonlabs/node-roon-api-settings",
-    "node-roon-api-status"    : "github:roonlabs/node-roon-api-status",
-    "node-roon-api-transport"	: "github:roonlabs/node-roon-api-transport"
+    "node-roon-api": "github:roonlabs/node-roon-api",
+    "node-roon-api-browse": "github:roonlabs/node-roon-api-browse",
+    "node-roon-api-image": "github:roonlabs/node-roon-api-image",
+    "node-roon-api-settings": "github:roonlabs/node-roon-api-settings",
+    "node-roon-api-status": "github:roonlabs/node-roon-api-status",
+    "node-roon-api-transport": "github:roonlabs/node-roon-api-transport"
   },
   "devDependencies": {
-    "@types/node": "^17.0.33"
+    "@types/node": "^17.0.33",
+    "typescript": "^5.7.2"
   }
 }
